<resources>
    <string name="app_name">HealthCare</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="show">SHOW</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_no">Contact No.</string>
    <string name="male">Male</string>
    <string name="sign_up">Sign Up</string>
    <string name="female">Female</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_show">SHOW</string>
    <string name="welcome_to_health_care">WELCOME TO HEALTH CARE</string>
    <string name="if_you_don_t_think_your_anxiety_depression_sadness_and_stress_impact_your_physical_health_think_again_all_of_these_emotions_trigger_chemical_reactions_in_your_body_which_can_lead_to_inflammation_and_a_weakened_immune_system_learn_how_to_cope_sweet_friend_there_will_always_be_dark_days">If you don\'t think your anxiety, depression, sadness and stress impact your physical health, think again. All of these emotions trigger chemical reactions in your body, which can lead to inflammation and a weakened immune system. Learn how to cope, sweet friend. There will always be dark days.</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
</resources>
